[tool.poetry]
name = "jonbot"
version = "0.1.0"
description = "a friendly machine 🤖❤️✨"
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4"
fastapi = "*"
mkdocs-material = "*"
pydantic = "1.*"
pymongo = "*"
rich = "*"
uvicorn = "*"
tzlocal = "*"
aiohttp = "*"
python-dotenv = "*"
openai = "*"
chromadb = "*"
tiktoken = "*"
py-cord = "*"
PyNaCl = "*"
aiofiles = "*"
python-telegram-bot = "*"
motor = "*"
langchain = "*"
pyperclip = "*"
tenacity = "*"
pydub = "*"
toml = "*"
anthropic = "*"
langsmith = "*"
pytest = "*"
pytest-asyncio = "*"
Jinja2 = "*"
pandas = "*"
tabulate = "*"
magic-tree = { git = "https://github.com/jonmatthis/magic_tree.git" }
moviepy = "^1.0.3"

[tool.poetry.group.dev.dependencies]
bumpver = "^2023.1125"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


dynamic = ["version"]


[tool.bumpver]
current_version = "v1.4.0"

version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"jonbot/__init__.py" = ["{version}"]